// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`groupActive 1`] = `
Object {
  "css": Object {
    ".group:active &": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`groupFocus 1`] = `
Object {
  "css": Object {
    ".group:focus &": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`groupHover 1`] = `
Object {
  "css": Object {
    ".group:hover &": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`groupVisited 1`] = `
Object {
  "css": Object {
    ".group:visited &": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;
